--- a/.docker/php-apache/sites-available/devboot.conf
+++ b/.docker/php-apache/sites-available/devboot.conf
@@ -1,16 +1,16 @@
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
-	ServerName siageov1.gs
-	ServerAlias www.siageov1.gs
-    DocumentRoot "/var/www/siageov1"
+	ServerName localhost
+	ServerAlias www.localhost
+    DocumentRoot "/var/www/html/public"
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
 <VirtualHost *:443>
-	DocumentRoot "/var/www/siageov1"
-	ServerName siageov1.gs
-	ServerAlias www.siageov1.gs
+	DocumentRoot "/var/www/html/public"
+	ServerName localhost
+	ServerAlias www.localhost
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
