Google Maps e OSM configurados

--- a/.docker/php-apache/sites-available/devboot.conf
+++ b/.docker/php-apache/sites-available/devboot.conf
@@ -1,22 +1,28 @@
 <VirtualHost *:80>
-	ServerAdmin webmaster@localhost
-	ServerName localhost
-	ServerAlias www.localhost
+	ServerName siageo.gs
+	ServerAlias www.siageo.gs
     DocumentRoot "/var/www/html/public"
+	AcceptPathInfo On
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
 <VirtualHost *:443>
 	DocumentRoot "/var/www/html/public"
-	ServerName localhost
-	ServerAlias www.localhost
+	ServerName siageo.gs
+	ServerAlias www.siageo.gs
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 	SSLEngine on
 	SSLCertificateFile "/etc/apache2/sites-available/ssl/cert.crt"
 	SSLCertificateKeyFile "/etc/apache2/sites-available/ssl/cert.key"
+
+	# <Files "\.(cgi|shtml|phtml|php)$"">
+	# 	Options +Includes
+	# 	SetOutputFilter INCLUDES
+	# 	AcceptPathInfo On
+	# </Files>
 
 	<FilesMatch "\.(cgi|shtml|phtml|php)$">
 		SSLOptions +StdEnvVars
